--- a/Breakout/GameplayForm.resx
+++ b/Breakout/GameplayForm.resx
@@ -120,4 +120,15 @@
   <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBoxBall.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAAGYktHRAD/AP8A/6C9p5MAAAAHdElNRQfjBBMLDwUQj5qc
+        AAAAHWlUWHRDb21tZW50AAAAAABDcmVhdGVkIHdpdGggR0lNUGQuZQcAAACTSURBVEhL7dPBDYAwDENR
+        FmH/RdgrKAej1v1VKQIOiMNDIiT2iSUihrZ1jR7fJTgUCu3x2xIOEwWNeIbgkALO8qzUDOhwlmdWL3Rw
+        VZn7SIFUJbRwl/dK6MPd/pIpf8mUD/2M+XiqSNlHSaLFq8rcqiTRwSzPrF6EDs/yrNQMhAJGPENwKBTU
+        47clHDoKFd9txbID5rJy+YoJ8RwAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
